[workspace]
members = [
  "tonic",
  "tonic-build",
  "tonic-health",
  "tonic-types",
  "tonic-reflection",
  "tonic-web", # Non-published crates
  "examples",
  "codegen",
  "grpc",
  "grpc-build",
  "interop", # Tests
  "tests/disable_comments",
  "tests/included_service",
  "tests/same_name",
  "tests/service_named_service",
  "tests/wellknown",
  "tests/wellknown-compiled",
  "tests/extern_path/uuid",
  "tests/ambiguous_methods",
  "tests/extern_path/my_application",
  "tests/integration_tests",
  "tests/stream_conflict",
  "tests/root-crate-path",
  "tests/compression",
  "tests/web",
  "tests/service_named_result",
  "tests/use_arc_self",
  "tests/default_stubs",
  "tests/deprecated_methods",
  "tests/skip_debug",
]
resolver = "2"

[workspace.package]
rust-version = "1.75"

[workspace.lints.rust]
missing_debug_implementations = "warn"
missing_docs = "warn"
rust_2018_idioms = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]
uninlined_format_args = "deny"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"
