[package]
name = "codegen"
authors = ["Lucio Franco <luciofranco14@gmail.com>"]
license = "MIT"
edition = "2021"

[dependencies]
protox = "0.8"
prettyplease = "0.2"
quote = "1"
syn = "2"
tempfile = "3.8.0"
tonic-build = {path = "../tonic-build", default-features = false, features = ["prost", "cleanup-markdown"]}
