[package]
authors = ["Lucio Franco <luciofranco14@gmail.com>"]
edition = "2021"
license = "MIT"
name = "examples"
publish = false
version = "0.1.0"

[[bin]]
name = "load-balance-client"
path = "src/load_balance/client.rs"

[[bin]]
name = "load-balance-server"
path = "src/load_balance/server.rs"

[[bin]]
name = "dynamic-load-balance-client"
path = "src/dynamic_load_balance/client.rs"

[[bin]]
name = "dynamic-load-balance-server"
path = "src/dynamic_load_balance/server.rs"

[[bin]]
name = "tls-client-auth-server"
path = "src/tls_client_auth/server.rs"

[[bin]]
name = "tls-client-auth-client"
path = "src/tls_client_auth/client.rs"

[[bin]]
name = "timeout-server"
path = "src/timeout/server.rs"

[[bin]]
name = "timeout-client"
path = "src/timeout/client.rs"

[dependencies]
prost = "0.11"
tokio = { version = "1.0", features = [ "rt-multi-thread", "time", "fs", "macros", "net",] }
tonic = { path = "../tonic", features = ["tls"] }
tower = { version = "0.4" }

[build-dependencies]
tonic-build = { path = "../tonic-build", features = ["prost"] }
