[package]
authors = ["Lucio Franco <luciofranco14@gmail.com>"]
edition = "2021"
license = "MIT"
name = "examples"
publish = false
version = "0.1.0"

[[bin]]
name = "load-balance-client"
path = "src/load_balance/client.rs"

[[bin]]
name = "load-balance-server"
path = "src/load_balance/server.rs"

[[bin]]
name = "tls-client-auth-server"
path = "src/tls_client_auth/server.rs"

[[bin]]
name = "tls-client-auth-client"
path = "src/tls_client_auth/client.rs"

[dependencies]
prost = "0.11"
tokio = { version = "1.0", features = [ "rt-multi-thread", "fs", "macros", "net",] }
tonic = { path = "../tonic", features = ["tls"] }

[build-dependencies]
tonic-build = { path = "../tonic-build", features = ["prost"] }
