[package]
name = "grpc-google"
version = "0.9.0-alpha.1"
edition = "2024"
authors = ["gRPC Authors"]
license = "MIT"
rust-version = { workspace = true }

[features]

[dependencies]
google-cloud-auth = { version = "1.9", default-features = false }
grpc = { path = "../grpc", default-features = false, features = ["tls-rustls"] }
tonic = { version = "0.14.0", path = "../tonic", default-features = false }
trait-variant = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
