[package]
name = "grpc-google"
version = "0.0.0-alpha"
edition = "2024"
authors = ["gRPC Authors"]
license = "MIT"
rust-version = { workspace = true }
publish = false

[package.metadata.cargo_check_external_types]
allowed_external_types = ["grpc::*"]

[features]

[dependencies]
google-cloud-auth = { version = "1.9", default-features = false }
grpc = { path = "../grpc", default-features = false }
tonic = { version = "0.14.0", path = "../tonic", default-features = false }
trait-variant = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
