[package]
name = "grpc-protobuf"
version = "0.9.0-alpha.1"
edition = "2024"
authors = ["gRPC Authors"]
license = "MIT"
rust-version = { workspace = true }
publish = false

[package.metadata.cargo_check_external_types]
allowed_external_types = [
    "grpc::*",
    "protobuf::*",
]

[features]

[dependencies]
bytes = "1.11.1"
grpc = { path = "../grpc" }
protobuf = "4.34.0-release"

[dev-dependencies]
