[package]
name = "grpc"
version = "0.9.0-alpha.1"
edition = "2021"
authors = ["gRPC Authors"]
license = "MIT"
rust-version = "1.86"

[package.metadata.cargo_check_external_types]
allowed_external_types = [
    "bytes::*",
    "tonic::*",
    "futures_core::stream::Stream",
    "tokio::sync::oneshot::Sender",
]

[features]
default = ["dns", "_runtime-tokio", "tls-rustls"]
dns = ["dep:hickory-resolver", "_runtime-tokio"]
# The following feature is used to ensure all modules use the runtime
# abstraction instead of using tokio directly.
# Using tower/buffer enables tokio's rt feature even though it's possible to
# create Buffers with a user provided executor.
_runtime-tokio = [
    "tokio/rt",
    "tokio/net",
    "tokio/time",
    "dep:socket2",
    "dep:tower",
]
# Used for testing with udeps as it wants this feature to exist
# to be able to do its checks.
tower = ["_runtime-tokio"]
tls-rustls = [
    "dep:rustls",
    "dep:rustls-pemfile",
    "dep:rustls-pki-types",
    "dep:tokio-rustls",
    "dep:rustls-platform-verifier",
    "dep:rustls-webpki",
]

[dependencies]
bytes = "1.10.1"
hickory-resolver = { version = "0.25.1", optional = true }
http = "1.1.0"
http-body = "1.0.1"
hyper = { version = "1.6.0", features = ["client", "http2"] }
parking_lot = "0.12.4"
pin-project-lite = "0.2.16"
rand = "0.9"
rustls = { version = "0.23", optional = true, default-features = false, features = [
    "tls12",
    "logging",
    "std",
] }
rustls-pemfile = { version = "2.1", optional = true, default-features = false, features = [
    "std",
] }
rustls-pki-types = { version = "1.8", optional = true, default-features = false }
rustls-platform-verifier = { version = "0.6", optional = true, default-features = false }
rustls-webpki = { version = "0.102", optional = true, default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
socket2 = { version = "0.6", optional = true }
tokio = { version = "1.37.0", features = ["sync", "macros"] }
tokio-rustls = { version = "0.26", optional = true, default-features = false }
tokio-stream = { version = "0.1.17", default-features = false }
tonic = { version = "0.14.0", path = "../tonic", default-features = false, features = [
    "codegen",
] }
tower = { version = "0.5.2", features = [
    "limit",
    "util",
    "buffer",
], optional = true }
tower-service = "0.3.3"
trait-variant = "0.1.2"
url = "2.5.0"

[dev-dependencies]
async-stream = "0.3.6"
hickory-server = "0.25.2"
prost = "0.14.0"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
tempfile = "3.26"
tonic = { version = "0.14.0", path = "../tonic", default-features = false, features = [
    "server",
    "router",
] }
tonic-prost = { version = "0.14.0", path = "../tonic-prost" }
