[package]
name = "grpc"
version = "0.9.0-alpha.1"
edition = "2024"
authors = ["gRPC Authors"]
license = "MIT"
rust-version = { workspace = true }

[package.metadata.cargo_check_external_types]
allowed_external_types = [
    "bytes::*",
    "tonic::*",
    "futures_core::stream::Stream",
    "tokio::sync::oneshot::*",
]

[features]
default = ["dns", "_runtime-tokio", "tls-rustls"]
dns = ["dep:hickory-resolver", "_runtime-tokio"]
# The following feature is used to ensure all modules use the runtime
# abstraction instead of using tokio directly.
# Using tower/buffer enables tokio's rt feature even though it's possible to
# create Buffers with a user provided executor.
_runtime-tokio = [
    "tokio/rt",
    "tokio/net",
    "tokio/time",
    "dep:socket2",
    "dep:tower",
]
# Used for testing with udeps as it wants this feature to exist
# to be able to do its checks.
tower = ["_runtime-tokio"]
tls-rustls = [
    "dep:rustls",
    "dep:rustls-pki-types",
    "dep:tokio-rustls",
    "dep:rustls-platform-verifier",
    "dep:rustls-webpki",
]

[dependencies]
base64 = "0.22"
bytes = "1.11"
hickory-resolver = { version = "0.26", optional = true }
http = "1.4"
http-body = "1.0.1"
hyper = { version = "1.9", features = ["client", "http2"] }
itoa = "1.0"
parking_lot = "0.12"
pin-project-lite = "0.2"
rand = "0.10"
rustls = { version = "0.23", optional = true, default-features = false, features = [
    "tls12",
    "logging",
    "std",
] }
rustls-pki-types = { version = "1.14", optional = true, default-features = false }
rustls-platform-verifier = { version = "0.7", optional = true, default-features = false }
rustls-webpki = { version = "0.103", optional = true, default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
socket2 = { version = "0.6", optional = true }
tokio = { version = "1.52", features = ["sync", "macros"] }
tokio-rustls = { version = "0.26", optional = true, default-features = false }
tokio-stream = { version = "0.1", default-features = false }
tonic = { version = "0.14.0", path = "../tonic", default-features = false, features = [
    "codegen",
] }
tower = { version = "0.5", features = [
    "limit",
    "util",
    "buffer",
], optional = true }
tower-service = "0.3.3"
trait-variant = "0.1.2"
url = "2.5"

[dev-dependencies]
async-stream = "0.3.6"
criterion = "0.8"
hickory-server = "0.26"
prost = "0.14"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
tempfile = "3.27"
tonic = { version = "0.14.0", path = "../tonic", default-features = false, features = [
    "server",
    "router",
    "tls-ring",
] }
tonic-prost = { version = "0.14.0", path = "../tonic-prost" }

[[bench]]
name = "metadata"
harness = false
