[package]
authors = ["Lucio Franco <luciofranco14@gmail.com>"]
edition = "2021"
license = "MIT"
name = "interop"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client_new_codegen"
path = "src/bin/client_new_codegen.rs"

[dependencies]
async-stream = "0.3"
strum = {version = "0.27", features = ["derive"]}
pico-args = {version = "0.5", features = ["eq-separator"]}
console = "0.16"
http = "1"
http-body-util = "0.1"
prost = "0.14"
tokio = {version = "1.0", features = ["rt-multi-thread", "time", "macros"]}
tokio-stream = "0.1"
tonic = {path = "../tonic", features = ["tls-ring"]}
tower = "0.5"
tracing-subscriber = {version = "0.3"}
grpc = {path = "../grpc"}
protobuf = { version = "4.31.1-release" }
tonic-protobuf = {path = "../tonic-protobuf"}

[build-dependencies]
tonic-build = {path = "../tonic-build", features = ["prost"]}
tonic-protobuf-build = {path = "../tonic-protobuf-build"}
