[package]
authors = ["Lucio Franco <luciofranco14@gmail.com>"]
edition = "2024"
license = "MIT"
name = "interop"
rust-version = { workspace = true }

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[dependencies]
async-stream = "0.3"
strum = {version = "0.27", features = ["derive"]}
pico-args = {version = "0.5", features = ["eq-separator"]}
console = "0.16"
http = "1"
http-body-util = "0.1"
prost = "0.14"
tokio = {version = "1.0", features = ["rt-multi-thread", "time", "macros"]}
tokio-stream = "0.1"
tonic = {path = "../tonic", features = ["tls-ring"]}
tonic-prost = {path = "../tonic-prost"}
tower = "0.5"
tracing-subscriber = {version = "0.3"}
grpc = {path = "../grpc"}
# TODO: Remove once the protobuf-codegen crate supports configuring the path to
# the protobuf crate used in the generated message code, instead of defaulting
# to `::protobuf`.
protobuf = { version = "4.33.0-release" }
tonic-protobuf = {path = "../tonic-protobuf"}

[build-dependencies]
tonic-prost-build = {path = "../tonic-prost-build"}
tonic-protobuf-build = {path = "../tonic-protobuf-build"}
