[package]
authors = ["Lucio Franco <luciofranco14@gmail.com>"]
categories = ["network-programming", "asynchronous"]
description = """
Codegen module of `tonic` gRPC implementation.
"""
documentation = "https://docs.rs/tonic-build/0.10.2"
edition = "2021"
homepage = "https://github.com/hyperium/tonic"
keywords = ["rpc", "grpc", "async", "codegen", "protobuf"]
license = "MIT"
name = "tonic-build"
readme = "README.md"
repository = "https://github.com/hyperium/tonic"
version = "0.10.2"

[dependencies]
prettyplease = { version = "0.2" }
proc-macro2 = "1.0"
prost-build = { version = "0.12", optional = true }
quote = "1.0"
syn = "2.0"

[features]
default = ["transport", "prost"]
prost = ["prost-build"]
cleanup-markdown = ["prost", "prost-build/cleanup-markdown"]
transport = []

[package.metadata.docs.rs]
all-features = true
