[package]
authors = ["Lucio Franco <luciofranco14@gmail.com>"]
categories = ["network-programming", "asynchronous"]
description = """
Codegen module of `tonic` gRPC implementation.
"""
documentation = "https://docs.rs/tonic-build/0.13.0"
edition = "2021"
homepage = "https://github.com/hyperium/tonic"
keywords = ["rpc", "grpc", "async", "codegen", "protobuf"]
license = "MIT"
name = "tonic-build"
readme = "README.md"
repository = "https://github.com/hyperium/tonic"
version = "0.13.0"

[dependencies]
prettyplease = { version = "0.2" }
proc-macro2 = "1.0"
prost-build = { version = "0.13", optional = true }
prost-types = { version = "0.13", optional = true }
quote = "1.0"
syn = "2.0"

[features]
default = ["transport", "prost"]
prost = ["prost-build", "dep:prost-types"]
cleanup-markdown = ["prost-build?/cleanup-markdown"]
transport = []

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true

[package.metadata.cargo_check_external_types]
allowed_external_types = [
  # major released
  "proc_macro2::*",

  # not major released
  "prost_build::*",
  "prost_types::*",
]
