[package]
authors = ["Lucio Franco <luciofranco14@gmail.com>"]
categories = ["network-programming", "asynchronous"]
description = """
Codegen module of `tonic` gRPC implementation.
"""
edition = "2021"
homepage = "https://github.com/hyperium/tonic"
keywords = ["rpc", "grpc", "async", "codegen", "protobuf"]
license = "MIT"
name = "tonic-build"
readme = "README.md"
repository = "https://github.com/hyperium/tonic"
version = "0.14.1"
rust-version = { workspace = true }

[dependencies]
prettyplease = { version = "0.2" }
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"

[features]
default = ["transport"]
transport = []

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true

[package.metadata.cargo_check_external_types]
allowed_external_types = [
  # major released
  "proc_macro2::*",
]
