[package]
name = "tonic-examples"
version = "0.1.0"
authors = ["Lucio Franco <luciofranco14@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "helloworld-server"
path = "src/helloworld/server.rs"

[[bin]]
name = "helloworld-client"
path = "src/helloworld/client.rs"

# [[bin]]
# name = "routeguide-server"
# path = "src/routeguide/server.rs"

[[bin]]
name = "routeguide-client"
path = "src/routeguide/client.rs"

[dependencies]
tonic = { path = "../tonic" }
futures-preview = { version = "=0.3.0-alpha.18", default-features = false, features = ["alloc"]}
tokio = "=0.2.0-alpha.4"
prost = "0.5"
prost-derive = "0.5"
bytes = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
async-stream = { git = "https://github.com/tokio-rs/async-stream" }
http = "0.1"

[build-dependencies]
tonic-build = { path = "../tonic-build" }
