[package]
name = "tonic-examples"
version = "0.1.0"
authors = ["Lucio Franco <luciofranco14@gmail.com>"]
edition = "2018"
publish = false
license = "MIT"

[[bin]]
name = "helloworld-server"
path = "src/helloworld/server.rs"

[[bin]]
name = "helloworld-client"
path = "src/helloworld/client.rs"

[[bin]]
name = "routeguide-server"
path = "src/routeguide/server.rs"

[[bin]]
name = "routeguide-client"
path = "src/routeguide/client.rs"

[[bin]]
name = "authentication-client"
path = "src/authentication/client.rs"

[[bin]]
name = "authentication-server"
path = "src/authentication/server.rs"

[[bin]]
name = "load-balance-client"
path = "src/load_balance/client.rs"

[[bin]]
name = "load-balance-server"
path = "src/load_balance/server.rs"

[[bin]]
name = "tls-client"
path = "src/tls/client.rs"

[[bin]]
name = "tls-server"
path = "src/tls/server.rs"

[[bin]]
name = "tls-client-auth-server"
path = "src/tls_client_auth/server.rs"

[[bin]]
name = "tls-client-auth-client"
path = "src/tls_client_auth/client.rs"

[[bin]]
name = "multiplex-server"
path = "src/multiplex/server.rs"

[[bin]]
name = "multiplex-client"
path = "src/multiplex/client.rs"

[[bin]]
name = "gcp-client"
path = "src/gcp/client.rs"

[dependencies]
tonic = { path = "../tonic", features = ["tls"] }
bytes = "0.4"
prost = "0.5"

tokio = { version = "0.2", features = ["rt-threaded", "time", "stream", "fs"] }
futures = { version = "0.3", default-features = false, features = ["alloc"]}
async-stream = "0.2"
http = "0.2"
tower = { git = "https://github.com/tower-rs/tower" }

# Required for routeguide
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.7.2"

# Required for wellknown types
prost-types = "0.5"

[build-dependencies]
tonic-build = { path = "../tonic-build" }
